[package]
description = "Created with Anchor"
edition = "2021"
name = "blueshift_anchor_vault"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "blueshift_anchor_vault"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }
